laboratorios y cambios admin

--- a/src/pages/admin.ejs
+++ b/src/pages/admin.ejs
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header>
-        <%- include('partials/navigation') %>
+        <%- include('partials/navigationAdmin') %>
+
     </header>
     <%- include('partials/footer') %>
 </body>
